--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,7 +37,13 @@ dependencies:
   cupertino_icons: ^1.0.6
   freezed_annotation: ^2.4.1
   json_annotation: ^4.8.1
+  bloc: ^8.1.2
   flutter_bloc: ^8.1.4
+
+  firebase_core: ^2.16.0
+
+  user_repository:
+    path: packages/user_repository
 
 dev_dependencies:
   flutter_test:
